# otel-python-grpc-nested-spans

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
otel_python_grpc_nested_spans/: client.py  server.py  sleeper.proto  sleeper_pb2.py  sleeper_pb2_grpc.py  tracing.py
